[package]
name = "web"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
opt-level = "z"
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "abort"
incremental = false

[dependencies]
thiserror = "1"
pin-project = "1"
smol = "1"
noop-waker = "0"

minifb = "0.25"

[dev-dependencies]

